# AgenticRag

./: README.md
rag/: .gitignore  pyproject.toml  requirements.txt
rag/data/data/vector_store/: chroma.sqlite3
rag/data/notebook/: agenticrag.ipynb  documents.ipynb
